--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Seja bem vindo ao meu Take Blip </h1>
     <h2>Meu nome é Altamir Guatura</h2>
     <button class="btn btn-primary">Sobre mim</button>
+    <scrip src="./scripts/script.js" type="text/javascript"></script>
 </body>
 </html>
